[WIP] Engine integration
This isn't finished, but it's almost ready
